feat : post crud operations are completed. repository and service php artisan commands were written.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Console/Commands/MakeRepository.php",
+            "app/Console/Commands/MakeService.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
